<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/back_kitchensearch_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:src="@mipmap/ic_back" />

        <RelativeLayout
            android:id="@+id/search_kitchen_fragment"
            android:layout_width="240dp"
            android:layout_height="34dp"
            android:layout_centerInParent="true"
            android:background="@color/gray_kitchen">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dp"
                android:src="@mipmap/search_result_recipe" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:background="@null"
                android:focusable="true"
                android:hint="@string/center_kitchen"
                android:textSize="12sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/search_kitchensearch_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:text="@string/search_kitchensearch_activity"
            android:textColor="@color/red"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/white_kitchensearch">

        <ImageView
            android:id="@+id/searchfriend_kitchensearch_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/search_result_recipe" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@id/searchfriend_kitchensearch_activity"
            android:text="@string/searchfriend_kitchensearch_activity"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/dish_made_arrow" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/white_kitchensearch">

        <ImageView
            android:id="@+id/searchmenu_kitchensearch_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/search_result_recipe" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@id/searchmenu_kitchensearch_activity"
            android:text="@string/searchmenu_kitchensearch_activity"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/dish_made_arrow" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white_kitchensearch"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/popsearch_kitchensearch_activity" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">


            <GridLayout
                android:id="@+id/popsearch_kitchensearch_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:orientation="horizontal"
                android:rowCount="3">

                <TextView
                    android:id="@+id/tangyuan_kitchensearch_activity"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:gravity="center" />

            </GridLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/view" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="@color/view" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="50dp"
                android:background="@color/view" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="100dp"
                android:background="@color/view" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="120dp"
                android:background="@color/view" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="240dp"
                android:background="@color/view" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>